--- a/spec for yml config/etcd.service
+++ b/spec for yml config/etcd.service
@@ -1,16 +1,15 @@
 [Unit]
 Description=etcd key-value store
 Documentation=https://github.com/etcd-io/etcd
-After=network.target
+Wants=network-online.target
+After=network-online.target
 
 [Service]
 User=etcd
 Type=notify
-Environment=ETCD_DATA_DIR=/var/lib/etcd
+Environment=ETCD_DATA_DIR=/var/lib/etcd/
 Environment=ETCD_CONFIG_FILE=/etc/etcd/etcd.yml
 ExecStart=/usr/bin/etcd
-Restart=on-failure
-RestartSec=10s
 LimitNOFILE=65536
 
 [Install]
