--- a/.github/workflows/rpm-releases.yml
+++ b/.github/workflows/rpm-releases.yml
@@ -17,7 +17,7 @@ jobs:
 
         - name: build RPM package
           id: rpm_build
-          uses: AnjaloHettiarachchi/rpmbuild@v1.0.0
+          uses: AnjaloHettiarachchi/rpmbuild@v1.1.0-latest
           with:
               spec_file: "spec_for_yml_config/etcd.spec"
 
